# acorn

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  playwright.capture.config.ts  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/workflows/: ci.yml  release.yml  security.yml
.storybook/: main.ts  preview.css  preview.ts
.storybook/mocks/: tauri-opener.ts
docs/: COMMENTS.md  COMMON.md  CONTROL_SESSIONS.md  E2E_TESTING.md  HOOK_ENV_INJECTION_PLAN.md  PR_LABELS.md  README_SCREENSHOTS.md  TESTING.md
scripts/: capture-readme.mjs  install-macos.sh  release-artifacts.mjs  release-artifacts.test.mjs  release-notes.mjs  release-notes.test.mjs  validate-release-version.mjs  validate-release-version.test.mjs
src/: App.css  App.tsx  main.tsx  store.test.ts  store.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/acorn-agent/: Cargo.toml
src-tauri/crates/acorn-agent/src/: lib.rs
src-tauri/crates/acorn-daemon/: Cargo.toml
src-tauri/crates/acorn-daemon/src/: client.rs  crash.rs  lib.rs  lifecycle.rs  logging.rs  paths.rs  protocol.rs  pty.rs  ring_buffer.rs  server.rs  session.rs  socket.rs  test_env.rs  wire.rs
src-tauri/crates/acorn-ipc/: Cargo.toml
src-tauri/crates/acorn-ipc/src/: cli_path.rs  lib.rs  primer.rs  proto.rs  socket_path.rs
src-tauri/crates/acorn-paths/: Cargo.toml
src-tauri/crates/acorn-paths/src/: lib.rs
src-tauri/crates/acorn-pty/: Cargo.toml
src-tauri/crates/acorn-pty/src/: lib.rs
src-tauri/crates/acorn-session/: Cargo.toml
src-tauri/crates/acorn-session/src/: lib.rs  scrollback.rs  session.rs  status.rs
src-tauri/crates/acorn-transcript/: Cargo.toml
src-tauri/crates/acorn-transcript/src/: lib.rs  line.rs
src-tauri/icons/: icon.icns
src-tauri/scripts/: build-sidecar.sh
src-tauri/shell-init/: zlogin  zprofile  zshenv  zshrc
src-tauri/shims/: claude.sh  codex.sh  gemini.sh
src-tauri/src/: agent_capabilities.rs  agent_history.rs  agent_hooks.rs  agent_resume.rs  agent_resume_persister.rs  agent_session_names.rs  agent_shim.rs  agent_transcript.rs  agent_transcript_watcher.rs  agent_wrappers.rs  ai.rs  chat_runs.rs  claude_util.rs  cli_resolver.rs  clipboard.rs  commands.rs  daemon_bridge.rs  daemon_commands.rs  daemon_stream.rs  error.rs  fs_explorer.rs  git_ops.rs  lib.rs  main.rs  persistence.rs  power_assertion.rs  project_settings.rs  pty.rs  pty_env.rs  pty_output.rs  pull_requests.rs  scrollback.rs  session.rs  session_status.rs  session_titles.rs  shell_args.rs  shell_env.rs  shell_init.rs  shell_util.rs  staged_rev_reconcile.rs  (+6 more)
src-tauri/src/daemon/: client.rs  crash.rs  lifecycle.rs  logging.rs  mod.rs  paths.rs  protocol.rs  pty.rs  ring_buffer.rs  server.rs  session.rs  socket.rs
src-tauri/src/ipc/: cli_path.rs  mod.rs  primer.rs  proto.rs  server.rs  socket_path.rs  workspaces.rs
src/components/: AcornRain.test.tsx  AcornRain.tsx  AgentResumeModal.test.tsx  AgentResumeModal.tsx  AiAgentIcon.tsx  AppRecoveryBoundary.tsx  AuthorAvatar.tsx  AuthorTag.tsx  AutonomousGoalDialog.test.tsx  AutonomousGoalDialog.tsx  BackgroundSessionsSettings.test.tsx  BackgroundSessionsSettings.tsx  ChatPane.test.tsx  ChatPane.tsx  ClaudeResumeModal.test.tsx  ClaudeResumeModal.tsx  ClosePullRequestDialog.tsx  CodeDiffVirtualization.test.tsx  CodeViewer.tsx  CommandPalette.tsx  CommandRunDialog.tsx  ContextMenu.test.tsx  ContextMenu.tsx  ControlSessionGuideModal.tsx  DeleteCommentDialog.tsx  DiffSplitView.tsx  DiffView.tsx  DiffViewerModal.tsx  DiscardCommentDraftDialog.tsx  FileDragGhost.tsx  FileDropHoverOverlay.tsx  FileExplorer.listener.test.tsx  FileExplorer.tsx  FileViewer.test.tsx  FileViewer.tsx  FolderPermissionWarmupModal.tsx  GitHubCommentComposer.tsx  GitHubCommentEditForm.tsx  GitHubLabelChip.tsx  ImageLightbox.tsx  (+49 more)
src/lib/: agentContextMenu.tsx  agentProvider.test.ts  agentProvider.tsx  agentProviderRegistry.ts  ai-agent.test.ts  ai-agent.ts  api.ts  autonomousGoal.test.ts  autonomousGoal.ts  background.test.ts  background.ts  clipboardImageAttachment.test.ts  clipboardImageAttachment.ts  clipboardText.test.ts  clipboardText.ts  cn.test.ts  dialog.ts  diff.test.ts  diff.ts  dnd.test.ts  dnd.ts  editor.ts  fileDrop.test.ts  fileDrop.ts  fileDropTargets.ts  fileExplorerDrag.ts  fileExplorerGitStats.test.ts  fileExplorerGitStats.ts  fileMention.test.ts  fileMention.ts  floatingLayer.ts  focus.ts  fonts.test.ts  fonts.ts  git-refresh-scheduler.test.ts  git-refresh-scheduler.ts  hiddenProjectSessions.test.ts  hiddenProjectSessions.ts  highlight.test.ts  highlight.ts  (+149 more)
src/locales/: en.json  ko.json
src/test/: setup.ts
stories/: chat.stories.tsx  dialogs.stories.tsx  feedback.stories.tsx  identity.stories.tsx  media.stories.tsx  ui.stories.tsx
stories/ui/: button.stories.tsx  checkbox-row.stories.tsx  code-value.stories.tsx  command-hint.stories.tsx  field.stories.tsx  floating-toolbar.stories.tsx  input.stories.tsx  list.stories.tsx  markdown.stories.tsx  modal-footer.stories.tsx  modal.stories.tsx  notice.stories.tsx  overview.stories.tsx  radio-card.stories.tsx  refresh-button.stories.tsx  segmented-control.stories.tsx  select.stories.tsx  skeleton.stories.tsx  status.stories.tsx  stepper.stories.tsx
tests/captures/: readme.spec.ts
tests/e2e/: agent-resume-modal.spec.ts  app-recovery.spec.ts  background-sessions.spec.ts  canvas.spec.ts  chat-message-actions.spec.ts  claude-resume-modal.spec.ts  command-hint.spec.ts  command-palette.spec.ts  control-session-install.spec.ts  control-session.spec.ts  file-explorer.spec.ts  goal-session.spec.ts  kanban.spec.ts  panes.spec.ts  permission-warmup.spec.ts  project-settings.spec.ts  right-panel.spec.ts  scrollbar-hidden.spec.ts  session-lifecycle.spec.ts  session-notifications.spec.ts  sessions.spec.ts  settings-tabs.spec.ts  settings.spec.ts  sidebar.spec.ts  smoke.spec.ts  statusbar.spec.ts  support.ts  terminal-ime.spec.ts  terminal.spec.ts  updater.spec.ts  (+2 more)
(+66 files in other folders)
