[workspace]
members = [
    ".",
    "crates/acorn-paths",
    "crates/acorn-daemon",
    "crates/acorn-ipc",
    "crates/acorn-pty",
    "crates/acorn-session",
    "crates/acorn-transcript",
]

# Shared dependencies referenced from each member crate with
# `<name> = { workspace = true }`. Keeping the version + feature set in
# one place removes drift risk between the main `acorn` crate and the
# extracted leaf crates (`acorn-daemon`, `acorn-ipc`, `acorn-pty`,
# `acorn-session`, `acorn-transcript`).
[workspace.dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
portable-pty = "0.9"
parking_lot = "0.12"
dashmap = "6"
directories = "5"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
interprocess = "2"
notify = "6"
ignore = "0.4"
globset = "0.4"
trash = "5"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# CI release profile — trades a small binary-size increase for much faster
# compile time. Used by `.github/workflows/release.yml`. Local releases
# (developers running `pnpm run tauri build`) still use [profile.release]
# above, so shipped artifact size is unchanged for ad-hoc builds.
[profile.release-ci]
inherits = "release"
lto = false
codegen-units = 32
incremental = false
strip = "debuginfo"

[package]
name = "acorn"
version = "1.11.4"
description = "Acorn — parallel AI coding agent sessions across isolated git worktrees"
authors = ["im-ian"]
edition = "2021"
default-run = "acorn"

[lib]
name = "acorn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Background daemon that owns persistent PTY sessions across Acorn app
# launches. Also doubles as the CLI surface used inside control sessions
# (e.g. `acornd create-tab`) — both modes share the same IPC protocol types
# defined in `daemon::protocol`. Default invocation (no subcommand or
# `acornd serve`) runs the daemon foreground; subcommands like `status`,
# `list-sessions`, etc. dial the running daemon as a client.
[[bin]]
name = "acornd"
path = "src/bin/acornd.rs"

# Tauri entry binary — Cargo defaults to the package name, but with multiple
# `[[bin]]` targets we must spell each out so Cargo does not collapse them.
[[bin]]
name = "acorn"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
acorn-daemon = { path = "crates/acorn-daemon" }
acorn-ipc = { path = "crates/acorn-ipc" }
acorn-paths = { path = "crates/acorn-paths" }
acorn-pty = { path = "crates/acorn-pty" }
acorn-session = { path = "crates/acorn-session" }
acorn-transcript = { path = "crates/acorn-transcript" }
tauri = { workspace = true }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
git2 = { workspace = true }
portable-pty = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
directories = { workspace = true }
sysinfo = { workspace = true }
base64 = { workspace = true }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2"
clap = { workspace = true }
# Cross-platform local IPC abstraction. Wraps Unix domain sockets on
# macOS/Linux and named pipes on Windows behind a single API so the daemon
# socket layer doesn't fork on `#[cfg(unix)]` vs `#[cfg(windows)]`. The
# `tokio` feature is intentionally NOT enabled here: the daemon's accept
# loop is a small synchronous thread per socket — pulling tokio's async
# runtime into the daemon binary would dwarf the work it actually does.
interprocess = { workspace = true }
# File-explorer support: cross-platform fs watcher (FSEvents on macOS),
# gitignore matcher aggregated per directory from repo root, and OS trash.
notify = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
trash = { workspace = true }

[dev-dependencies]
# Used by `fs_explorer` unit tests for scratch directories.
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
# `setsid()` and `getpid()` wrappers for detaching the daemon from the
# spawning Acorn app's process group. Feature-flagged to only what we use
# so the build stays lean.
nix = { version = "0.31", default-features = false, features = ["process", "signal"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.4", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSBitmapImageRep", "NSImageRep", "NSPasteboard"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSArray", "NSData", "NSDictionary", "NSObject", "NSString"] }
