[package]
name = "acorn-pty"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "acorn_pty"

[dependencies]
tauri = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
portable-pty = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
