[package]
name = "acorn-session"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "acorn_session"

[dependencies]
acorn-agent = { path = "../acorn-agent" }
acorn-transcript = { path = "../acorn-transcript" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
acorn-pty = { path = "../acorn-pty" }
